Fix: - the font "JM Heiti" now loads also on iOS Google Chrome

--- a/src/public/fonts/heiti/stylesheet.css
+++ b/src/public/fonts/heiti/stylesheet.css
@@ -1,8 +1,9 @@
 @font-face {
     font-family: 'JM Heiti TC';
-    src: local('Heiti TC Medium'), local('STHeitiTC-Medium'),
-        url('STHeitiTC-Medium.woff2') format('woff2'),
-        url('STHeitiTC-Medium.woff') format('woff');
+    src: 
+      local('Heiti TC Medium'),
+      url('./STHeitiTC-Medium.woff2') format('woff2'),
+      url('./STHeitiTC-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -10,9 +11,10 @@
 
 @font-face {
     font-family: 'JM Heiti TC';
-    src: local('Heiti TC Light'), local('STHeitiTC-Light'),
-        url('STHeitiTC-Light.woff2') format('woff2'),
-        url('STHeitiTC-Light.woff') format('woff');
+    src: 
+      local('Heiti TC Light'),
+      url('./STHeitiTC-Light.woff2') format('woff2'),
+      url('./STHeitiTC-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
